force-app/main/default/objects/Customer_Onboarding__c/Customer_Onboarding__c.object-meta.xml
<CustomObject>
    <description>Stores customer onboarding workflow submissions and reusable workflow state.</description>
    <label>Customer Onboarding</label>
    <nameField>
        <displayFormat>CO-{0000}</displayFormat>
        <label>Customer Onboarding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Onboardings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>