force-app/main/default/objects/Customer_Onboarding__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Stores the customer&apos;s address details.</description>
    <label>Address</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>