force-app/main/default/objects/Customer_Onboarding__c/fields/Assigned_User__c.field-meta.xml
<CustomField>
    <fullName>Assigned_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Stores the assigned workflow owner.</description>
    <label>Assigned User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned User Records</relationshipLabel>
    <relationshipName>Customer_Onboarding_Assigned_User</relationshipName>
    <type>Lookup</type>
</CustomField>