force-app/main/default/objects/Customer_Onboarding__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Stores the customer&apos;s city.</description>
    <label>City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>