force-app/main/default/objects/Customer_Onboarding__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Stores the email address of the workflow user.</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>