force-app/main/default/objects/Customer_Onboarding__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>Stores the full name of the workflow user.</description>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>