force-app/main/default/objects/Customer_Onboarding__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Stores the customer&apos;s postal or ZIP code.</description>
    <label>Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>