force-app/main/default/objects/Customer_Onboarding__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Stores the customer&apos;s state or province.</description>
    <label>State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>