force-app/main/default/objects/Customer_Onboarding__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <description>Stores workflow submission timestamp.</description>
    <label>Submission Date</label>
    <type>DateTime</type>
</CustomField>