force-app/main/default/objects/Customer_Onboarding__c/fields/Workflow_Type__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Type__c</fullName>
    <description>Identifies the workflow category.</description>
    <label>Workflow Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Onboarding</fullName>
                <label>Customer Onboarding Workflow</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>